2003-03-11  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/Request.cs: We need to check for length returned equal to 0 in alias_matches
	* src/mod_mono.c: fixed bug when matching prefix that made mod_mono handle all pages even those
	outside MonoApplication scope. Also fixed the way alias_matches is exposed to Request
	* FAQ.txt: Added some answers about Apache 1.3 and how to use proxypass
	* packaging/redhat/mod_mono.spec: Update to 0.3.6
	
2003-02-25  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	Bring it up to date with Mono 0.20
	* src/mod_mono.c: added mono_thread_attach (thanks Dick). Return NULL if header not found.
	* src/ApacheApplicationHost.cs: Add an internal method so the call will
	be made in the right domain, as suggested by Dietmar. This can be done from C, but was added after 
	Mono 0.20. It also required a serialization constructor for IntPtr that Gonzalo promptly added, thanks!
	* packaging/redhat/mod_mono.spec: Update for latest versions
	
2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: updated from xsp.

2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: fixed buglet in GetAppPath.

2003-02-04  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* Makefile.am: Add rpm spec files to packaging
	
2003-02-03  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* packaging/redhat: Added mod_mono.spec and mono.conf for RPM generation, thanks to David Hollis <dhollis@davehollis.com> for submitting it.
	
2003-02-02  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Fixed returning null value when no query string is present. Thanks to "Ula? VURAL" <uvural@netorbits.com> and Geo <_geo@post.sk> for reporting this.
	
2003-01-22  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Some typos and step by step instructions for Red Hat 8.0
	* README: Removed reference to POST not working
	* FAQ.txt: Added doc with more common problems people find installing mod_mono